# python-iteration-codegolf

./: .gitignore  Makefile  assignment.md  encoder.py  normal.py  pyproject.toml  test_soln.py  uncompressed.py
