[tool.poetry]
name = "shortest"
version = "0.1.0"
description = ""
authors = ["Riley Shahar <riley.shahar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
hypothesis = "^6.24.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
